<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none"
        android:id="@+id/first_group">
    <item
        android:id="@+id/navigation_scrolling"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/scrolling"
         />
    <item
        android:id="@+id/navigation_swipe"
        android:icon="@android:drawable/ic_media_rew"
        android:title="@string/swipeCardView"
         />
    </group>
    <group android:checkableBehavior="none"
        android:id="@+id/second_group">
        <item
            android:id="@+id/navigation_animation"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/animation"
            />
        <item
            android:id="@+id/navigation_four"
            android:icon="@drawable/ic_settings_menu"
            android:title="@string/action_settings"
            />
    </group>
</menu>